Update min stability to DEV

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
       "email": "maurohmartinez@gmail.com"
     }
   ],
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
   "autoload": {
     "psr-4": {
       "MHM\\TwoFactorAuth": "src/"
