--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,12 @@
     "pragmarx/google2fa-laravel": "^2.0",
     "laravel/framework": "^9.0.0"
   },
+  "keywords": [
+    "laravel",
+    "backpack",
+    "two factor authentication",
+    "google authentication for laravel"
+  ],
   "license": "MIT",
   "authors": [
     {
