--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "php": "^8.0",
     "pragmarx/google2fa-qrcode": "^3.0",
     "pragmarx/google2fa-laravel": "^2.0",
-    "laravel/framework": "^8.0.0|^9.0.0",
+    "laravel/framework": "^8.0.0|^9.0.0|^10.0.0",
     "bacon/bacon-qr-code": "^2.0.0"
   },
   "keywords": [
